fix bug menu 10, update README